@@ -18,7 +18,7 @@ sys.path.insert(0, os.path.dirname(fullPath))
 # conary imports
 from conary.lib import util
 sys.excepthook = util.genExcepthook(debug=True)
-from conary.dbstore import dbsql
+from conary.dbstore import shell
 
 def usage():
     print 'usage: %s [dbstore driver] [dbstore connection path]' %sys.argv[0]
@@ -31,8 +31,8 @@ def main():
     if len(args) != 2:
         usage()
 
-    shell = dbsql.DbSql(driver=args[0], path=args[1])
-    shell.cmdloop()
+    dbshell = shell.DbShell(driver=args[0], path=args[1])
+    dbshell.cmdloop()
 
 if __name__ == '__main__':
     main()
